2011-05-24  Jim Meyering  <meyering@redhat.com>

	opendir-safer.c: don't clobber errno; don't close negative FD
	* lib/opendir-safer.c (opendir_safer):
	[HAVE_FDOPENDIR || GNULIB_FDOPENDIR]: Don't close a negative
	file descriptor, and more importantly, don't clobber the
	offending errno value with EINVAL.  Before, upon failure
	of dup_safer, we would pass the negative file descriptor to
	fdopendir, which would clobber errno.

2011-05-23  Bruno Haible  <bruno@clisp.org>

	idcache: Fix module description.
	* modules/idcache (Include): Set to "idcache.h".

2011-05-23  Paul Eggert  <eggert@cs.ucla.edu>

	gnulib-tool: fix portability problem with MacOS sed
	A sed command like "/x/{s/a/b/}" is not portable; a newline is needed
	before the "}".  Problem reported by Leo in
	<http://lists.gnu.org/archive/html/emacs-devel/2011-05/msg00717.html>.
	* gnulib-tool (func_modules_transitive_closure): Insert newlines in
	sed_extract_condition1, sed_extract_condition2.

2011-05-23  Bruno Haible  <bruno@clisp.org>

	getugroups: Fix module description.
	* modules/getugroups (Include): Set to "getugroups.h".

2011-05-23  Bruno Haible  <bruno@clisp.org>
	    Eric Blake  <eblake@redhat.com>

	linkat, renameat: Update dependencies.
	* modules/renameat (Depends-on): Add dosname, save-cwd. Remove stpcpy.
	* modules/linkat (Depends-on): Likewise. Remove also readlink,
	symlinkat.

2011-05-22  Paul Eggert  <eggert@cs.ucla.edu>

	verify: fix bug when gnulib <assert.h> is also included
	* lib/verify.h (verify, verify_true): Define if _GL_VERIFY_H
	is defined, not if _GL_STATIC_ASSERT_H is not defined.
	Perhaps there's a better way, but this fixes the immediate problem.
	Problem reported by Bruno Haible in
	<http://lists.gnu.org/archive/html/bug-gnulib/2011-05/msg00478.html>.

2011-05-21  Paul Eggert  <eggert@cs.ucla.edu>

	clock-time: change to LGPLv2+.
	* modules/clock-time: Change from GPL to LGPLv2+.  Actually, it's
	BSD-like but we have no mark for that; this is good enough for now.
